<resources>
    <string name="app_name">澳购</string>

    <string name="goods">首页</string>
    <string name="all">全部</string>
    <string name="no_network">网络不给力，请检查您的网络是否正常</string>

    <!--permission-->
    <string name="permission">权限申请</string>
    <string name="go_set">去设置</string>
    <string name="permission_sd_hint">在设置-应用-澳购-权限中开启存储空间权限，以正常使用澳购功能</string>
    <string name="permission_phone_hint">在设置-应用-澳购-权限中开启电话权限，以正常使用澳购功能</string>

    <!-- sign in -->
    <string name="prompt_email">手机号码</string>
    <string name="password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="sign_up">注册</string>
    <string name="get_password">忘记密码</string>
    <string name="get_code">获取验证码</string>
    <string name="code_send">验证码已发送</string>
    <string name="input_password">请输入密码</string>
    <string name="login_error">手机号或密码错误，请重新登录</string>
    <string name="input_code">请输入验证码</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">手机号码不正确</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">请输入手机号码</string>

    <!--sign up-->
    <string name="prompt_code">验证码</string>
    <string name="sign_up_success">注册成功，请登录</string>
    <string name="user_exist">用户名已存在，请直接登录</string>
    <string name="sign_up_error">该用户已注册，请直接登录</string>
    <string name="prompt_password">请输入6-16位密码</string>
    <string name="prompt_new_password">请输入6-16位新密码</string>
    <string name="prompt_now_password">请输入当前密码</string>
    <string name="prompt_nickname">请输入昵称</string>
    <string name="prompt_re_password">请确认新密码</string>
    <string name="reset_password">设置新密码</string>
    <string name="prompt_password_not">两次输入密码不一致</string>
    <string name="code_error">验证码错误，请重新输入</string>
    <string name="resend_code">重新获取</string>
    <string name="can_resend_code">秒后重发</string>
    <string name="next_step">下一步</string>
    <string name="sure">确认</string>

    <!--setting-->
    <string name="mine">我的</string>
    <string name="setting">设置</string>
    <string name="my_likes">我的收藏</string>
    <string name="exit">退出登录</string>
    <string name="message">消息</string>
    <string name="favorite">收藏</string>
    <string name="already_favorite">已收藏</string>
    <string name="service">客服</string>
    <string name="ao">澳洲</string>

    <!--find-->
    <string name="find">发现</string>
    <string name="we_chat">微信精选</string>
    <string name="cook">菜谱大全</string>
    <string name="cook_material">食材：%1$s</string>

    <!--information-->
    <string name="sign_in_hint">请点击登录</string>
    <string name="avatar">头像</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="men">男</string>
    <string name="women">女</string>
    <string name="usual_address">我的地址</string>
    <string name="signature">个人简介</string>
    <string name="information">个人信息</string>
    <string name="save">保存</string>
    <string name="modify_nickname">更改昵称</string>
    <string name="modify_address">更改地址</string>
    <string name="modify_password">更改密码</string>
    <string name="password_not_same">两次输入的密码不一致</string>
    <string name="password_short">密码长度应为6到16位字符</string>
    <string name="password_error">原密码错误，请重新输入</string>
    <string name="password_success">密码修改成功，可以用新密码进行登录啦</string>

</resources>
