<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/top"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TableRow
            android:id="@+id/avatar"
            android:background="@color/image_white"
            android:gravity="center_vertical"
            android:paddingBottom="@dimen/eight"
            android:paddingLeft="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/eight">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/avatar"
                android:textColor="@color/primary_text" />


            <ImageView
                android:id="@+id/avatarImageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_avatar" />

        </TableRow>


        <TableRow
            android:id="@+id/nickname"
            android:layout_marginTop="@dimen/one"
            android:background="@color/image_white"
            android:gravity="center_vertical"
            android:padding="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/nickname"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/nicknameTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:gravity="end"
                android:maxLines="1"
                android:textColor="@color/content" />

        </TableRow>

        <TableRow
            android:id="@+id/gender"
            android:layout_marginTop="@dimen/one"
            android:background="@color/image_white"
            android:gravity="center_vertical"
            android:padding="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/gender"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/gender_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:maxLines="1"
                android:textColor="@color/content" />

        </TableRow>


        <TableRow
            android:id="@+id/address"
            android:layout_marginTop="@dimen/one"
            android:background="@color/image_white"
            android:gravity="center_vertical"
            android:padding="@dimen/activity_vertical_margin">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/usual_address"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/addressTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_vertical_margin"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="end"
                android:maxLines="1"
                android:textColor="@color/content" />

        </TableRow>

        <TextView
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@color/image_white"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/modify_password"
            android:textColor="@color/primary_text" />

        <TextView
            android:id="@+id/exit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@color/image_white"
            android:padding="@dimen/activity_vertical_margin"
            android:text="@string/exit"
            android:textColor="@color/primary_text" />

    </TableLayout>

</RelativeLayout>